--- a/.github/workflows/welcom.yml
+++ b/.github/workflows/welcom.yml
@@ -1,41 +1,49 @@
+
 name: Summarize News with AI
+
 on:
   push:
     branches:
-      -main
+      - main
   pull_request:
     branches:
-      -main
+      - main
   schedule:
-    -cron: "31 2 * * *"
-workflow_dispatch:
-
+    - cron: "31 2 * * *"
+  workflow_dispatch:
 
 jobs:
   summarize_news:
     runs-on: ubuntu-latest
-    steps: # 步骤1: 检出代码
+
+    steps:
+      # 步骤 1: 检出代码
       - name: Checkout code
         uses: actions/checkout@v3
-        # 步骤2: 设置 Python 环境
-      - name: Setup Python
+
+      # 步骤 2: 设置 Python 环境
+      - name: Set up Python
         uses: actions/setup-python@v4
-        with: python-version:'3.10'
-        # 步骤3: 安装依赖项
+        with:
+          python-version: '3.10'
+
+      # 步骤 3: 安装依赖项
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade
-          pip     pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Install Playwright browsers
         run: |
-          python -m playwright install 
-          # 安装 Playwright 所需的浏览器
-          # 步骤 4: 运行爬虫并调用 AI 模型进行总结
+          python -m playwright install  # 安装 Playwright 所需的浏览器
+
+        # 步骤 4: 运行爬虫并调用 AI 模型进行总结
       - name: Run the script
+
         run: |
-          python main.py
+          python main.py  # 将 `your_script_name.py` 替换为你的 Python 脚本名称
         env:
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }} # 使用 GitHub Secrets 存储 API 密钥
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}  # 使用 GitHub Secrets 存储 API 密钥
           SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
           SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
           RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
